test/tests/compiler/17_supporting_dynamic_memory_allocation/valid/sizeof/plx1_sizeof_ternary.plx
pub fn main(none) i32 {
    x: char = 'x'
    if sizeof(? nil then "foo" else @x) == 8 { return 0 }
    return 1
}
