test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_var_init_none_pointer.plx
pub fn main(none) i32 {
    x: *none = nil
    return 0
}
